--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Piotruś jestem</title>
     <link rel="stylesheet" href="style/style.css">
     <script src="https://kit.fontawesome.com/2d8ceac0b7.js" crossorigin="anonymous"></script>
 </head>
