--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h3>O mnie</h3>
             <p>
                 Nazywam się Piotrek uczę się w technikum nr 3 w Wodzisławiu Śląskim. <br/>
-                Jestem początkującym programistą, uczę się jezyków programowania takich jak;
+                Jestem początkującym programistą, uczę się jezyków programowania takich jak:
                 <br />
                 C#, HTML, CSS, Java, JavaScript oraz c++
             </p>
