--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <a href="www.piotrusjestem.me">
+        <a href="http://www.piotrusjestem.me">
         <img class= "logo" src="images/logo.svg" height="37px" width="150px" alt="logo">
         </a>
         <nav>
