--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         <div class="aboutMe">
             <h3>O mnie</h3>
             <p>
-                Nazywam się Piotrek uczę się w technikum nr 3 w Wodzisławiu Śląskim. <br/>
+                Nazywam się Piotrek, uczę się w technikum nr 3 w Wodzisławiu Śląskim. <br/>
                 Jestem początkującym programistą, uczę się jezyków programowania takich jak:
                 <br />
                 C#, HTML, CSS, Java, JavaScript oraz c++
             </p>
             <p>
-                Moje projekty zarówno te które są jeszcze nie dokończone jak i te finalne wersje znajdziesz w zakładce projekty.
+                Moje projekty zarówno te, które są jeszcze nie dokończone jak i te finalne wersje znajdziesz w zakładce projekty.
             </p>
         </div>
         <div class="myphoto">
