--- a/kontakt.html
+++ b/kontakt.html
@@ -39,6 +39,7 @@
                 <textarea name="message"></textarea>
                 <input type="submit" value="Submit">
             </form>
+            <span style="font-size: 72px" color="red">UWAGA! TO NIE DZIAŁA BO MOJ HOSTING NIE OBSLUGUJE PHP</span>
         </div>
 
 
