--- a/kontakt.html
+++ b/kontakt.html
@@ -31,15 +31,14 @@
         <div class="form">
             <form method="post" name="contact_form"
                   action="php/contact-form-handler.php">
-                Your Name:
-                <input type="text" name="name"><br />
-                Email Address:
-                <input type="text" name="email"><br />
-                Message:
-                <textarea name="message"></textarea>
+                Your Name: <br />
+                <input type="text" name="name" placeholder="user name"><br />
+                Email Address: <br />
+                <input type="text" name="email" placeholder="user@example.com"><br />
+                Message: <br />
+                <textarea name="message" cols="45" rows="5"></textarea> <br />
                 <input type="submit" value="Submit">
             </form>
-            <span style="font-size: 72px" color="red">UWAGA! TO NIE DZIAŁA BO MOJ HOSTING NIE OBSLUGUJE PHP</span>
         </div>
 
 
