dobra to już dużo nowości

--- a/kontakt.html
+++ b/kontakt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Piotruś jestem</title>
+    <title>Piotruś jestem - Kontakt</title>
     <link rel="stylesheet" href="style/style_default.css">
     <link rel="stylesheet" href="style/style_contact.css">
     <script src="https://kit.fontawesome.com/2d8ceac0b7.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
             <nav>
                 <ul class="nav_lnk">
                     <li><a href="#" class="nav_link">&NULL&NULL</a></li>
-                    <li><a href="#" class="nav_link">&NULL&NULL</a></li>
+                    <li><a href="gallery.html" class="nav_link">Galeria</a></li>
                     <li><a href="#" class="nav_link">Projekty</a></li>
                 </ul>
             </nav>
