--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul class="nav_lnk">
                     <li><a href="#" class="nav_link">&NULL&NULL</a></li>
-                    <li><a href="#" class="nav_link">&NULL&NULL</a></li>
+                    <li><a href="gallery.html" class="nav_link">Galeria</a></li>
                     <li><a href="#" class="nav_link">Projekty</a></li>
                 </ul>
             </nav>
