dodanie gry itp

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </a>
             <nav>
                 <ul class="nav_lnk">
-                    <li><a href="#" class="nav_link">&NULL&NULL</a></li>
+                    <li><a href="game.html" class="nav_link">Gra</a></li>
                     <li><a href="gallery.html" class="nav_link">Galeria</a></li>
-                    <li><a href="#" class="nav_link">Projekty</a></li>
+                    <li><a href="projects.html" class="nav_link">Projekty</a></li>
                 </ul>
             </nav>
             <a class= "con" href= "kontakt.html"><button>Kontakt</button></a>
