aktualizacja zakładki projekty

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Piotruś jestem - Kontakt</title>
     <link rel="stylesheet" href="style/style_default.css">
+    <link rel="stylesheet" href="style/style_projects.css">
 </head>
 
 <body>
@@ -23,8 +24,15 @@
         </header>
 
 
+        <div class="contentWrapper">
 
 
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+            </div>
 
 
 
