--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,8 @@
 
 <div class="gallery">
 
+    <!-- POPRAWIĆ BY TO BYŁO W FLEXBOX -->
+
     <a href="images/toGallery1.jpg" data-lightbox="mygallery" data-title="1"><img src="images/toGallery1.jpg" alt="Pojawił się jakiś błąd skontaktuj się ze mną poprzez zakładkę kontakt"></a>
     <a href="images/toGallery2.jpg" data-lightbox="mygallery" data-title="2"><img src="images/toGallery2.jpg" alt="Pojawił się jakiś błąd skontaktuj się ze mną poprzez zakładkę kontakt"></a>
 
