aktualizacja zakładki projekty

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,21 @@
         <div class="contentWrapper">
 
 
-                <div class="project"></div>
+                <div class="project">
+
+                    <span id="project-info">
+
+                        <span style="color: rgba(0, 136, 169, 1); font-size: 1.5rem">Platformer 2D</span> <br />
+                        Typ: Gra <br />
+                        Opis: Niesamowicie wciągająca gra z<br/>
+                        responsywnym sterowaniem, której <br/>
+                        założeniem jest przejście jak<br/>
+                        najszybciej kolejnych coraz <br/>
+                        trudniejszych poziomów.
+                    </span>
+                    <img src="images/projects/2D%20platformermer.png" alt="" id="clip1">
+                    
+                </div>
                 <div class="project"></div>
                 <div class="project"></div>
                 <div class="project"></div>
