aktualizacja zakładki projekty

--- a/projects.html
+++ b/projects.html
@@ -29,21 +29,36 @@
 
                 <div class="project">
 
-                    <span id="project-info">
+                    <span class="project-info">
 
-                        <span style="color: rgba(0, 136, 169, 1); font-size: 1.5rem">Platformer 2D</span> <br />
-                        Typ: Gra <br />
-                        Opis: Niesamowicie wciągająca gra z<br/>
-                        responsywnym sterowaniem, której <br/>
-                        założeniem jest przejście jak<br/>
-                        najszybciej kolejnych coraz <br/>
-                        trudniejszych poziomów.
+                        <span class="project-name">Platformer 2D</span> <br /><br/>
+                        Typ: Gra <br /><br/>
+                        Opis: Niesamowicie wciągająca<br/> gra z responsywnym<br/> sterowaniem, której<br/> założeniem jest przejście<br/> jak najszybciej<br/> kolejnych coraz<br/> trudniejszych<br/> poziomów.
                     </span>
-                    <img src="images/projects/2D%20platformermer.png" alt="" id="clip1">
-                    
+                    <img src="images/projects/2D%20platformermer.png" alt="" class="clip">
+
+
                 </div>
-                <div class="project"></div>
-                <div class="project"></div>
+                <div class="project">
+                    <span class="project-info">
+                        <span class="project-name">FastCar.exe</span>
+                        <br/><br/>
+                        Typ: gra <br/><br/>
+                        Opis: Szybkie dziewczyny czy<br/> szybkie samochody? Po co<br/> wybierać wybierz obie w<br/> wyjątkowej grze<br/> wyścigowej<br/> szybkieauta.exe!
+
+                    </span>
+                    <img src="images/projects/brumbrum.png" alt="" class="clip" width="100%" height="100%">
+                </div>
+                <div class="project">
+                    <span class="project-info">
+                        <span class="project-name">MySqlClient</span>
+                        <br/><br/>
+                        Typ: aplikacja konsolowa <br/><br/>
+                        Opis: Aplikacja służy do łatwego<br/> zarządzania bazą danych<br/> mySql. Dzięki niej będziesz<br/> mógł, usuwać, dodawać<br/> oraz wyświetlać<br/> poszczególne dane<br/> z bazdy danych.
+
+                    </span>
+                    <img src="images/projects/MySqlClient.png" alt="" class="clip" width="100%" height="100%">
+                </div>
                 <div class="project"></div>
                 <div class="project"></div>
             </div>
