--- a/game.html
+++ b/game.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Piotruś jestem - Kontakt</title>
+    <title>Piotruś jestem - Gra</title>
     <link rel="stylesheet" href="style/style_default.css">
     <link rel="stylesheet" href="style/style_memory.css">
     <script src=""></script>
