--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Piotruś jestem - Kontakt</title>
+    <title>Piotruś jestem - Projekty</title>
     <link rel="stylesheet" href="style/style_default.css">
     <link rel="stylesheet" href="style/style_projects.css">
 </head>
