jezyk na polski

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 
         <div class="contentWrapper">
 
-
+            <a href="#">
                 <div class="project">
 
                     <span class="project-info">
@@ -36,9 +36,9 @@
                         Opis: Niesamowicie wciągająca<br/> gra z responsywnym<br/> sterowaniem, której<br/> założeniem jest przejście<br/> jak najszybciej<br/> kolejnych coraz<br/> trudniejszych<br/> poziomów.
                     </span>
                     <img src="images/projects/2D%20platformermer.png" alt="" class="clip">
-
-
                 </div>
+            </a>
+            <a href="#">
                 <div class="project">
                     <span class="project-info">
                         <span class="project-name">FastCar.exe</span>
@@ -49,6 +49,8 @@
                     </span>
                     <img src="images/projects/brumbrum.png" alt="" class="clip" width="100%" height="100%">
                 </div>
+            </a>
+            <a href="#">
                 <div class="project">
                     <span class="project-info">
                         <span class="project-name">MySqlClient</span>
@@ -59,6 +61,7 @@
                     </span>
                     <img src="images/projects/MySqlClient.png" alt="" class="clip" width="100%" height="100%">
                 </div>
+            </a>
             </div>
 
 
