--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,15 @@
                     <img src="images/projects/MySqlClient.png" alt="" class="clip" width="100%" height="100%">
                 </div>
             </a>
+            <a href="logowanie.html">
+                <div class="project">
+                        <span class="project-info">
+                        <span class="project-name">Logowanie</span> <br /><br/>
+                    </span>
+
+                    <img src="images/projects/logowanie.jpg" alt="" class="clip" width="100%" height="100%">
+                </div>
+            </a>
             </div>
 
 
