Dodanie logowania do projektów

--- a/game.html
+++ b/game.html
@@ -49,14 +49,14 @@
 
         <script>
             const memoryGame = {
-                tileCount : 20, //liczba klocków
-                tileOnRow : 5, //liczba klocków na rząd
-                divBoard : null, //div z planszą gry
-                divScore : null, //div z wynikiem gry
-                tiles : [], //tutaj trafi wymieszana tablica klocków
-                tilesChecked : [], //zaznaczone klocki
-                moveCount : 0, //liczba ruchów
-                tilesImg : [ //grafiki dla klocków
+                tileCount : 20,
+                tileOnRow : 5,
+                divBoard : null,
+                divScore : null,
+                tiles : [],
+                tilesChecked : [],
+                moveCount : 0,
+                tilesImg : [
                     "images/memory/title_1.png",
                     "images/memory/title_2.png",
                     "images/memory/title_3.png",
