--- a/logowanie.html
+++ b/logowanie.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Piotrusjestem - Logowanie java script</title>
     <link rel="stylesheet" href="style/style_default.css">
     <link rel="stylesheet" href="style/style_login.css">
 
@@ -51,13 +51,13 @@
                 if(document.form1.autoLogin.checked){
                     setCookie("autoLogin", "true");
                 }
-                document.location.href = "wejdz.html";
+                document.location.href = "test.html";
             }
         }
         function checkAutoLogin()
         {
             if(getCookie("autoLogin") == "true"){
-                document.location.href = "wejdz.html";
+                document.location.href = "test.html";
             }
         }
         // Koniec kodu JavaScript -->
