Dodanie logowania do projektów

--- a/test.html
+++ b/test.html
@@ -64,121 +64,121 @@
 
 <div class="contentWrapper">
 <form name="quiz">
-    <div class="odp">//1
+    <div class="odp">
         <P><B>Czy c++ został stworzony z myślą o porgramowaniu obiektowym</B><br/><br/>
 
         <input type=radio name="1" value="a">Nie<br/>
         <input type=radio name="1" value="b">Tak</P>
     </div>
-    <div class="odp">//2
+    <div class="odp">
         <P><B>Aby pobrać ciąg znaków z klawiatury do programu w języku c++ zadziała:</B><br/><br/>
 
         <input type=radio name="2" value="a">cin >> zmienna;<br/>
         <input type=radio name="2" value="b">cin << zmienna;</P>
     </div>
-    <div class="odp">//3
+    <div class="odp">
         <P><B>Co się stanie po wykonaniu tej lini kodu w html5<br/><br/>&lt;p&gt;Przykładowy tekst &lt;p/&gt;</B><br/><br/>
 
         <input type=radio name="3" value="a">Stworzy się akapit<BR>
         <input type=radio name="3" value="b">Stworzy się lista</P>
     </div>
-    <div class="odp">//4
+    <div class="odp">
         <P><B>Z jakiego to języka programowania?</B><br/><br/>
             <img src="images/pytania/Pytanie1.jpg" alt=""> <br/>
         <input type=radio name="4" value="a">Java Script<br/>
         <input type=radio name="4" value="b">C#</P>
     </div>
-    <div class="odp">//5
+    <div class="odp">
         <P><B>Kto dostanie ocene celująca z tego zadania</B><br/><br/>
 
         <input type=radio name="5" value="a">Ktoś inny <br/>
         <input type=radio name="5" value="b">Piotrek Bartczak</P>
     </div>
-    <div class="odp">//6
+    <div class="odp">
         <P><B>Linuks i windows to to samo </B><br/><br/>
 
         <input type=radio name="6" value="a">Nie<br/>
         <input type=radio name="6" value="b">Tak</P>
     </div>
-    <div class="odp">//7
+    <div class="odp">
         <P><B>Polecenie "ipconfig" w cmd wyświetli takie dane jak; brama domyślna, adress ip komputera, numer telefonu do ładnej kobiety </B><br/><br/>
 
         <input type=radio name="7" value="a">Nie<br/>
         <input type=radio name="7" value="b">Tak</P>
     </div>
-    <div class="odp">//8
+    <div class="odp">
         <P><B>(windows)W cmd znak '?' działa tak samo jak polecenie help</B><br/><br/>
 
         <input type=radio name="8" value="a">Nie<br/>
         <input type=radio name="8" value="b">Tak</P>
     </div>
-    <div class="odp">//9
+    <div class="odp">
         <P><B>Console.writeline w C# pokaże w konsoli linie i kolejne polecenia będą wykonywać się od nowej lini</B><br/><br/>
 
         <input type=radio name="9" value="a">Nie<br/>
         <input type=radio name="9" value="b">Tak</P>
     </div>
-    <div class="odp">//10
+    <div class="odp">
         <P><B>Poprawny zapis w c++ aby zdeklarować tablice to:</B><br/><br/>
 
         <input type=radio name="10" value="a">char[x] nazwa;<br/>
         <input type=radio name="10" value="b">char nazwa[x]</P>
     </div>
-    <div class="odp">//11
+    <div class="odp">
         <P><B>CSS służy do nadawania stronie wyglądu</B><br/><br/>
 
         <input type=radio name="11" value="a">Tak<br/>
         <input type=radio name="11" value="b">Nie</P>
     </div>
-    <div class="odp">//12
+    <div class="odp">
         <P><B>Do{...}while(...) najpierw się wykona a potem sprawdzi warunek </B><br/><br/>
 
         <input type=radio name="12" value="a">Nie<br/>
         <input type=radio name="12" value="b">Tak</P>
     </div>
-    <div class="odp">//13
+    <div class="odp">
         <P><B>C# jest językiem obiektowym</B><br/><br/>
 
         <input type=radio name="13" value="a">Nie<br/>
         <input type=radio name="13" value="b">Tak</P>
     </div>
-    <div class="odp">//14
+    <div class="odp">
         <P><B>Czy w notatniku możesz napisać program i go skompilować</B><br/><br/>
 
         <input type=radio name="14" value="a">Nie<BR>
         <input type=radio name="14" value="b">Tak</P>
     </div>
-    <div class="odp">//15
+    <div class="odp">
         <P><B>int w c++ ma minimum x bitów</B><br/><br/>
 
         <input type=radio name="15" value="a">x=8<BR>
         <input type=radio name="15" value="b">x=16</P>
     </div>
-    <div class="odp">//16
+    <div class="odp">
         <P><B>long w c++ odpowiada za liczby całkowite</B><br/><br/>
 
         <input type=radio name="16" value="a">Nie<br/>
         <input type=radio name="16" value="b">Tak</P>
     </div>
-    <div class="odp">//17
+    <div class="odp">
         <P><B>Math.pow(x,y) co oznacza x i y</B><br/><br/>
 
         <input type=radio name="17" value="a">x - liczba, y - potęga do której ma być podniesiony x<br/>
         <input type=radio name="17" value="b">x - liczba, y - mnożnik x'sa</P>
     </div>
-    <div class="odp">//18
+    <div class="odp">
         <P><B>18. Czy w code-blocks można używać skrótu ctrl+z?</B><br/><br/>
 
         <input type=radio name="18" value="a">Nie<br/>
         <input type=radio name="18" value="b">Tak</P>
     </div>
-    <div class="odp">//19
+    <div class="odp">
         <P><B>Czy można napisać program który blokuje spam w mailach</B><br/><br/>
 
         <input type=radio name="19" value="a">Nie<br/>
         <input type=radio name="19" value="b">Tak</P>
     </div>
-    <div class="odp">//20
+    <div class="odp">
         <P><B>Czy da się nauczyć programowania</B><br/><br/>
 
         <input type=radio name="20" value="a">Nie<br/>
